<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/train_question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/train_question_tv"
        android:textColor="#4e342e"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/train_name_et"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/edit_text_hint"/>

    <Button
        android:id="@+id/train_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_next_button"
        android:layout_alignParentBottom="true"
        android:padding="20dp"/>

</RelativeLayout>