<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="#4e342e"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signature_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/welcome_text_view"
        android:layout_below="@id/welcome_text_view"
        android:text="@string/signature"
        android:textSize="12sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/gender_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome_text_view"
        android:layout_alignRight="@+id/welcome_text_view"
        android:layout_below="@+id/signature_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="17dp"
        android:text="@string/gender_button"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/age_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome_text_view"
        android:layout_alignRight="@+id/welcome_text_view"
        android:layout_below="@+id/gender_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="17dp"
        android:text="@string/age_button"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/face_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome_text_view"
        android:layout_alignRight="@+id/welcome_text_view"
        android:layout_below="@+id/age_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="17dp"
        android:text="@string/face_button"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="14sp"/>

</RelativeLayout>