<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FaceRecognizerActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/CameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ToggleButton
            android:id="@+id/toggle_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textOff="@string/front_camera"
            android:textOn="@string/back_camera"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:padding="17dp"
            android:text="@string/back_button"/>

    </RelativeLayout>

</FrameLayout>